tests/type/good/function-call.py
def fun(x):
    return x

y = fun(1) + 1
y = fun(1) + 1
y = fun(1) + 1
y = fun("lol")
