tests/type/bad/wrong-number-of-parameter.py
def foo(x, y):
    return x + y

z = foo(1)
